# fakecc

./: .gitignore  LICENSE  README  fakecc.py  pyproject.toml  test_fakecc.py
