[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fakecc"
authors = [{name = "Paweł Stiasny", email = "pawel@territory.dev"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = {file = "README", "content-type" = "text/plain"}

[project.scripts]
fakecc = "fakecc:main"

[project.urls]
Home = "https://github.com/territory-dev/fakecc"
